install summernote for my textarea and add little bit of css

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -1,3 +1,10 @@
+.admin-photo-thumbnail{
+    width:200px;
+    border-radius: 5px;
+}
+
+/* edit foto page side bar */
+
 .photo-info-box {
 
     border: 1px solid #e5e5e5;
