made default image and path to get user img

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -3,6 +3,12 @@
     border-radius: 5px;
 }
 
+.user_image{
+    width:62px;
+    height:62px;
+    border-radius: 5px;
+}
+
 /* edit foto page side bar */
 
 .photo-info-box {
